--- a/changelog.org
+++ b/changelog.org
@@ -9,6 +9,12 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 * [2025-10-22 Wed]
 
+** Changed
+
+*** "Set scheduled datetime" action uses two different icons
+
+Issue: https://github.com/200ok-ch/organice/issues/1052
+
 ** Fixed
 
 *** Components/OrgFile/TimestampEditor: Incorrect Timestamp Format
