test: Add test for tags with special characters

--- a/test_helpers/fixtures/headline_filter.org
+++ b/test_helpers/fixtures/headline_filter.org
@@ -1,4 +1,4 @@
-* TODO Spec header							  :spec_tag:tag2:
+* TODO Spec header                                                       :spec_tag:tag2:#technology:
 
 :PROPERTIES:
 :prop1: abc
