--- a/WIKI.org
+++ b/WIKI.org
@@ -341,6 +341,8 @@ WebDAV server for your instance, you can by setting the variable
 
 organice supports Emacs Org mode's habit tracking feature with a visual consistency graph. Habits are TODO items that you want to track consistently over time, like daily exercise or meditation.
 
+#+html: <p align="center"> <img src="https://github.com/user-attachments/assets/268c68a9-e338-44fe-a6b2-60571c7b4753"/> </p>
+
 *** Creating a habit
 
 To create a habit, add a =STYLE= property with the value =habit= to your TODO item:
@@ -383,6 +385,10 @@ In Settings > Base, you can configure:
 - =Show all habits today=: When enabled, all habits appear in today's agenda view, even if not scheduled or already marked DONE
 
 These settings sync across devices when using a sync backend.
+
+*** Comparison to Emacs Org habits view
+
+#+html: <p align="center"> <img src="https://github.com/user-attachments/assets/fcf06a7f-58eb-49ee-8bb4-a1dd63b8165f"/> </p>
 
 ** Can I access local files?
 :PROPERTIES:
