--- a/changelog.org
+++ b/changelog.org
@@ -7,7 +7,7 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
-* [2026-01-07 Tue]
+* [2026-01-08 Thu]
 
 ** Added
 
@@ -18,6 +18,10 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
     - The deadline part can be removed by setting the value to 0
     - Upstream documentation: https://orgmode.org/manual/Tracking-your-habits.html
     - The parser already supported this syntax, but now you can edit it visually in the timestamp editor
+
+* [2026-01-07 Tue]
+
+** Added
 
 *** Org Habits consistency graph
     - Visual consistency graph showing habit completion over time
