--- a/changelog.org
+++ b/changelog.org
@@ -9,6 +9,12 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 * [2026-02-12 Thu]
 
+** Changed
+
+*** Migrated search parser from pegjs to peggy
+    - pegjs is end of life (last commit 7+ years ago); peggy is the maintained fork
+    - PR: https://github.com/200ok-ch/organice/pull/1101
+
 ** Added
 
 *** Auto-continue lists in description editor
